[package]
name = "eprint-api"
version = "0.1.0"
edition = "2021"
authors = ["Dan Cline <dan@dancline.net>"]

[lib]
name = "eprint_lib"
path = "src/lib.rs"

[[bin]]
name = "eprint"
path = "bin/eprint/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
