[package]
name = "eprint-lib"
version = "0.1.0"
edition = "2021"
authors = ["Dan Cline <dan@dancline.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }

clap = { version = "4.0", optional = true }

[features]
clap = ["dep:clap"]
